--- a/docs-astro/src/content/docs/index.mdx
+++ b/docs-astro/src/content/docs/index.mdx
@@ -1,16 +1,17 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Softex
+description: Plataforma inteligente para gestão eficiente de recursos físicos em ambiente híbrido.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Sistema de Gestão de Recursos
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/LOGO_SOFTEX_TAGLINE_BRANCO_OFFLINE.png
+    alt: Logo Softex
   actions:
-    - text: Example Guide
+    - text: Guia de Uso
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
+    - text: Documentação Técnica
       link: https://starlight.astro.build
       icon: external
       variant: minimal
@@ -18,19 +19,23 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Sobre a Softex
+
+A Softex (Associação para Promoção da Excelência do Software Brasileiro) é uma entidade sem fins lucrativos dedicada ao fortalecimento do setor de tecnologia e software no Brasil. Com mais de 25 anos de atuação, articula programas estratégicos em parceria com o Ministério da Ciência, Tecnologia e Inovação (MCTI) e outras instituições.
+
+## Principais Funcionalidades
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Gestão de Salas" icon="building">
+		Controle inteligente de reservas de salas de reunião com visibilidade em tempo real da ocupação.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Estações de Trabalho" icon="computer">
+		Gestão de postos individuais não fixos em ambiente de coworking interno.
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+	<Card title="Planejamento Híbrido" icon="calendar">
+		Coordenação eficiente entre atividades presenciais e remotas com integração corporativa.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Relatórios e Analytics" icon="chart">
+		Visibilidade completa da ocupação e métricas para otimização do espaço físico.
 	</Card>
 </CardGrid>
