feat( gh-pages): tela home atualizada da forma correta, sem erros

--- a/docs-astro/src/content/docs/index.mdx
+++ b/docs-astro/src/content/docs/index.mdx
@@ -5,14 +5,14 @@ template: splash
 hero:
   tagline: Sistema de Gestão de Recursos
   image:
-    file: ../../assets/LOGO_SOFTEX_TAGLINE_BRANCO_OFFLINE.png
+    file: ../../assets/LOGO_SOFTEX_TAGLINE_ROXO_OFFLINE.png
     alt: Logo Softex
   actions:
-    - text: Guia de Uso
-      link: /guides/example/
+    - text: Documentação
+      link: /REQ-2025.2-T01-Softex/home/sobre/
       icon: right-arrow
-    - text: Documentação Técnica
-      link: https://starlight.astro.build
+    - text: GitHub
+      link: https://github.com/mdsreq-fga-unb/REQ-2025.2-T01-Softex/tree/gh-pages
       icon: external
       variant: minimal
 ---
@@ -39,3 +39,60 @@ A Softex (Associação para Promoção da Excelência do Software Brasileiro) é
 		Visibilidade completa da ocupação e métricas para otimização do espaço físico.
 	</Card>
 </CardGrid>
+
+## Equipe do Projeto
+
+<div class="team-grid">
+  <div class="team-card">
+    <img src="https://github.com/y123yuri.png" alt="Yuri Andrade" class="team-photo" />
+    <div class="team-info">
+      <h3>Yuri Andrade</h3>
+      <p class="team-role">Gerência do Projeto & DevOps</p>
+      <a href="https://github.com/y123yuri" class="team-github">@y123yuri</a>
+    </div>
+  </div>
+  <div class="team-card">
+    <img src="https://github.com/gusmoles.png" alt="Guilherme Gusmão" class="team-photo" />
+    <div class="team-info">
+      <h3>Guilherme Gusmão</h3>
+      <p class="team-role">Frontend (Vue.js)</p>
+      <a href="https://github.com/gusmoles" class="team-github">@gusmoles</a>
+    </div>
+  </div>
+
+  <div class="team-card">
+    <img src="https://github.com/darkymeubem.png" alt="Felipe Pedroza" class="team-photo" />
+    <div class="team-info">
+      <h3>Felipe Pedroza</h3>
+      <p class="team-role">Backend (Python/DRF) & Análise de Requisitos</p>
+      <a href="https://github.com/darkymeubem" class="team-github">@darkymeubem</a>
+    </div>
+  </div>
+
+  <div class="team-card">
+    <img src="https://github.com/camposs04.png" alt="Júlia Santana" class="team-photo" />
+    <div class="team-info">
+      <h3>Júlia Santana</h3>
+      <p class="team-role">Modelagem de Dados</p>
+      <a href="https://github.com/camposs04" class="team-github">@camposs04</a>
+    </div>
+  </div>
+
+  <div class="team-card">
+    <img src="https://github.com/Pietrocv.png" alt="Pietro Calegari" class="team-photo" />
+    <div class="team-info">
+      <h3>Pietro Calegari</h3>
+      <p class="team-role">Backend (Python/DRF)</p>
+      <a href="https://github.com/Pietrocv" class="team-github">@Pietrocv</a>
+    </div>
+  </div>
+
+  <div class="team-card">
+    <img src="https://github.com/rich4rd1.png" alt="Kauã Richard" class="team-photo" />
+    <div class="team-info">
+      <h3>Kauã Richard</h3>
+      <p class="team-role">DevOps/Infraestrutura & Qualidade (QA)</p>
+      <a href="https://github.com/rich4rd1" class="team-github">@rich4rd1</a>
+    </div>
+  </div>
+</div>
