--- a/docs-astro/src/content/docs/index.mdx
+++ b/docs-astro/src/content/docs/index.mdx
@@ -9,7 +9,7 @@ hero:
     alt: Logo Softex
   actions:
     - text: Documentação
-      link: /home/sobre/
+      link: /REQ-2025.2-T01-Softex/home/sobre/
       icon: right-arrow
     - text: GitHub
       link: https://github.com/mdsreq-fga-unb/REQ-2025.2-T01-Softex
