feat(gh-pages): visoes de produto e de projeto completo

--- a/docs-astro/src/content/docs/visao/cenario.mdx
+++ b/docs-astro/src/content/docs/visao/cenario.mdx
@@ -85,9 +85,10 @@ A Softex opera em **modelo híbrido**, combinando atividades presenciais e remot
   </Card>
 </CardGrid>
 
-### Análise de Causas
+### Análise de Causas e Efeitos
 
 ![Diagrama Ishikawa - Causas do Problema](./../../../assets/diagrama-ishikawa.png)
+[Link para o diagrama no Canva](https://www.canva.com/design/DAGzEg3Z9Ro/GjPasH6fVHmBAdKcDYdPmA/edit?utm_content=DAGzEg3Z9Ro&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)
 
 ### Oportunidade de Solução
 
