update requisitos do sistema

--- a/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
+++ b/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
@@ -146,3 +146,11 @@ description: Requisitos funcionais e não funcionais do Sistema de Gestão de Sa
   <li>O sistema deverá atender às diretrizes de acessibilidade <strong>WCAG</strong>, permitindo navegação por teclado e alto contraste de cores</li>
   <li>O sistema deverá estar em conformidade com a <strong>LGPD</strong>, criptografando dados sensíveis e solicitando consentimento para uso de informações pessoais</li>
 </ul>
+
+### Mapa de requisitos (Figma)
+
+<iframe
+  style={{ border: '1px solid #ddd', borderRadius: '8px', width: '100%', height: '640px' }}
+  src={`https://www.figma.com/embed?embed_host=astro&url=FIGMA_URL_AQUI`}
+  allowFullScreen
+/>
