update link figma

--- a/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
+++ b/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
@@ -151,6 +151,6 @@ description: Requisitos funcionais e não funcionais do Sistema de Gestão de Sa
 
 <iframe
   style={{ border: '1px solid #ddd', borderRadius: '8px', width: '100%', height: '640px' }}
-  src={`https://www.figma.com/embed?embed_host=astro&url=FIGMA_URL_AQUI`}
+  src={`https://www.figma.com/board/NvgFffhUVPQNWu9lsVYpMZ/Mapa-de-Requisitos?node-id=0-1&p=f&t=BcWzTa9m6j6TULiw-0`}
   allowFullScreen
 />
