fix(gh-pages): Filtrar salas e resercas

--- a/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
+++ b/docs-astro/src/content/docs/visao/levantamento-parcial.mdx
@@ -56,9 +56,13 @@ import requisitosFigma from '../../../assets/requisitos.jpeg';
   <li>**Descrição breve** do uso</li>
 </ul>
 
-### RF05 – Filtrar reservas
+### RF05 – Filtrar busca e visualização <span class="badge badge--media">Média</span>
 
-<p>O sistema deverá permitir filtrar reservas por sala, horário e dias da semana.</p>
+<ul class="softex-list">
+  <li>O sistema deverá permitir filtrar reservas por sala.</li>
+  <li>O O sistema deverá permitir filtrar reservas por horário.</li>
+  <li>O sistema deverá permitir filtrar reservas por dias da semana.</li>
+</ul>
 
 ### RF06 – Editar e cancelar reservas <span class="badge badge--alta">Alta</span>
 
